Initial work on porting to GTK4, using gir.core
So far, most of Pinta is disabled and only an empty window is shown.

Porting notes:
- Use libadwaita for the main window. We'll likely want to use libadwaita's tab bar widget later on.
- The WindowPosition property was removed, so it's up to the window manager to place the window
- Replaced VBox with a Box that has vertical orientation
- Use composition instead of unnecessary inheritance

--- a/Pinta.Resources/Pinta.Resources.csproj
+++ b/Pinta.Resources/Pinta.Resources.csproj
@@ -1,8 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="GtkSharp" Version="3.24.24.38" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="icons/hicolor/*/*/*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -197,5 +194,11 @@
     <EmbeddedResource Include="Resources\Menu.Effects.Default.png">
       <LogicalName>Menu.Effects.Default.png</LogicalName>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <!-- TODO-GTK4 - build all files -->
+  <ItemGroup>
+    <Compile Remove="**/*.cs" />
+    <Compile Include="Icons.cs" />
   </ItemGroup>
 </Project>
