--- a/Pinta.Tools/Pinta.Tools.csproj
+++ b/Pinta.Tools/Pinta.Tools.csproj
@@ -3,9 +3,11 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="GtkSharp" Version="3.24.24.38" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Pinta.Core\Pinta.Core.csproj" />
+  </ItemGroup>
+
+  <!-- TODO-GTK4 - build all files -->
+  <ItemGroup>
+    <Compile Remove="**/*.cs" />
   </ItemGroup>
 </Project>
