--- a/tests/PintaBenchmarks/PintaBenchmarks.csproj
+++ b/tests/PintaBenchmarks/PintaBenchmarks.csproj
@@ -17,6 +17,12 @@
     <ProjectReference Include="..\..\Pinta.Gui.Widgets\Pinta.Gui.Widgets.csproj" />
   </ItemGroup>
 
+  <!-- TODO-GTK4 - build all files -->
+  <ItemGroup>
+    <Compile Remove="**/*.cs" />
+    <Compile Include="Program.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <None Update="Assets\2000px-test.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
