Update the CI builds for GTK4
- Disable the installer steps for macOS / Windows for now since further work is required
- Install the libadwaita / GTK4 libraries

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build-ubuntu:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     # Test building with .NET 6 and .NET 7
     strategy:
@@ -31,7 +31,7 @@ jobs:
     - name: Install Apt Dependencies
       run: |
         sudo apt update
-        sudo apt install autotools-dev autoconf-archive gettext intltool libgtk-3-dev
+        sudo apt install autotools-dev autoconf-archive gettext intltool libadwaita-1-0
     - name: Generate Tarball
       run: |
         ./autogen.sh
@@ -63,21 +63,23 @@ jobs:
       with:
         dotnet-version: ${{env.DOTNET_VERSION}}
     - name: Install Dependencies
-      run: brew install gtk+3 adwaita-icon-theme gettext
+      run: brew install libadwaita adwaita-icon-theme gettext
     - name: Build
       run: dotnet build Pinta.sln -c Release
     - name: Test
       run: dotnet test Pinta.sln -c Release
 
     - name: Add Cert to Keychain
-      if: github.event_name != 'pull_request'
+      if: ${{ false }} # Disable until the installer supports GTK4
+      #if: github.event_name != 'pull_request'
       uses: apple-actions/import-codesign-certs@v1
       with:
         p12-file-base64: ${{ secrets.MAC_CERTS_BASE64 }}
         p12-password: ${{ secrets.MAC_CERTS_PASSWORD }}
 
     - name: Build Installer
-      if: github.event_name != 'pull_request'
+      if: ${{ false }} # Disable until the installer supports GTK4
+      #if: github.event_name != 'pull_request'
       env:
         MAC_DEV_PASSWORD: ${{ secrets.MAC_DEV_PASSWORD }}
       run: |
@@ -85,7 +87,8 @@ jobs:
         ./build_installer.sh
 
     - name: Upload Installer
-      if: github.event_name != 'pull_request'
+      if: ${{ false }} # Disable until the installer supports GTK4
+      #if: github.event_name != 'pull_request'
       uses: actions/upload-artifact@v3
       with:
         name: "Pinta.dmg"
@@ -109,6 +112,7 @@ jobs:
 
     # Note that msgfmt is already available from the Git for Windows installation!
     - name: Build Installer
+      if: ${{ false }} # Disable until the installer supports GTK4
       run: |
         choco install innosetup -y -v
         dotnet publish Pinta.sln -p:BuildTranslations=true -c Release -r win-x64 --self-contained true
@@ -116,6 +120,7 @@ jobs:
 
     - name: Upload Installer
       uses: actions/upload-artifact@v3
+      if: ${{ false }} # Disable until the installer supports GTK4
       with:
         name: "Pinta.exe"
         path: installer/windows/Pinta.exe
