Initial work on porting menus to GTK4
This is generally straightforward - the main difference is that app menus are no longer a separate API. The first menu is now just interpreted as the app menu on macOS

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -16,7 +16,12 @@
   <ItemGroup>
     <Compile Remove="**/*.cs" />
     <Compile Include="PintaCore.cs" />
+    <Compile Include="Actions/AppActions.cs" />
+    <Compile Include="Actions/HelpActions.cs" />
+    <Compile Include="Actions/Command.cs" />
     <Compile Include="Classes/Translations.cs" />
+    <Compile Include="Extensions/GtkExtensions.cs" />
+    <Compile Include="Managers/ActionManager.cs" />
     <Compile Include="Managers/SettingsManager.cs" />
     <Compile Include="Managers/SystemManager.cs" />
   </ItemGroup>
