Enable the File menu for GTK4, and fix issues with the Command key not being used for macOS shortcuts

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -17,9 +17,11 @@
     <Compile Remove="**/*.cs" />
     <Compile Include="PintaCore.cs" />
     <Compile Include="Actions/AppActions.cs" />
+    <Compile Include="Actions/FileActions.cs" />
     <Compile Include="Actions/HelpActions.cs" />
     <Compile Include="Actions/Command.cs" />
     <Compile Include="Classes/Translations.cs" />
+    <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
     <Compile Include="Extensions/GtkExtensions.cs" />
     <Compile Include="Managers/ActionManager.cs" />
     <Compile Include="Managers/SettingsManager.cs" />
