Add a couple common utilities to simplify porting
These might belong in gir.core in the future.

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -22,6 +22,8 @@
     <Compile Include="Actions/Command.cs" />
     <Compile Include="Classes/Translations.cs" />
     <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
+    <Compile Include="Extensions/CairoExtensions.cs" />
+    <Compile Include="Extensions/GdkExtensions.cs" />
     <Compile Include="Extensions/GtkExtensions.cs" />
     <Compile Include="Managers/ActionManager.cs" />
     <Compile Include="Managers/SettingsManager.cs" />
