Enable the about dialog in the GTK4 build.
- Enable PintaCore.Chrome to access the main window
- Remove the AccelGroup which doesn't exist in GTK4, and shortcuts seems to work fine without this

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -26,6 +26,7 @@
     <Compile Include="Extensions/GdkExtensions.cs" />
     <Compile Include="Extensions/GtkExtensions.cs" />
     <Compile Include="Managers/ActionManager.cs" />
+    <Compile Include="Managers/ChromeManager.cs" />
     <Compile Include="Managers/SettingsManager.cs" />
     <Compile Include="Managers/SystemManager.cs" />
   </ItemGroup>
