Add some utility classes for easier GTK4 porting
Some structs like Cairo.Point, Gdk.Size, etc aren't defined. Hopefully having a common type will also avoid the many conversions between gdk / cairo structs throughout the code, and only require conversions at the call sites

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -20,7 +20,10 @@
     <Compile Include="Actions/FileActions.cs" />
     <Compile Include="Actions/HelpActions.cs" />
     <Compile Include="Actions/Command.cs" />
+    <Compile Include="Classes/Point.cs" />
+    <Compile Include="Classes/Rectangle.cs" />
     <Compile Include="Classes/Translations.cs" />
+    <Compile Include="Enumerations/*.cs" />
     <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
     <Compile Include="Extensions/CairoExtensions.cs" />
     <Compile Include="Extensions/GdkExtensions.cs" />
