Add more methods to the Point / Rectangle structs, and build Pinta.Core/Effects

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -20,9 +20,11 @@
     <Compile Include="Actions/FileActions.cs" />
     <Compile Include="Actions/HelpActions.cs" />
     <Compile Include="Actions/Command.cs" />
+    <Compile Include="Classes/ObservableObject.cs" />
     <Compile Include="Classes/Point.cs" />
     <Compile Include="Classes/Rectangle.cs" />
     <Compile Include="Classes/Translations.cs" />
+    <Compile Include="Effects/*.cs" />
     <Compile Include="Enumerations/*.cs" />
     <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
     <Compile Include="Extensions/CairoExtensions.cs" />
