--- a/Pinta.Effects/Pinta.Effects.csproj
+++ b/Pinta.Effects/Pinta.Effects.csproj
@@ -10,5 +10,8 @@
   <!-- TODO-GTK4 - build all files -->
   <ItemGroup>
     <Compile Remove="**/*.cs" />
+    <Compile Include="Adjustments/*.cs" />
+    <Compile Include="Effects/*.cs" />
+    <Compile Include="Utilities/*.cs" />
   </ItemGroup>
 </Project>
