--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -20,6 +20,9 @@
     <Compile Include="Actions/FileActions.cs" />
     <Compile Include="Actions/HelpActions.cs" />
     <Compile Include="Actions/Command.cs" />
+    <Compile Include="Classes/Document.cs" />
+    <Compile Include="Classes/DocumentLayers.cs" />
+    <Compile Include="Classes/DocumentSelection.cs" />
     <Compile Include="Classes/IExtension.cs" />
     <Compile Include="Classes/Layer.cs" />
     <Compile Include="Classes/ObservableObject.cs" />
@@ -31,12 +34,15 @@
     <Compile Include="Classes/UserLayer.cs" />
     <Compile Include="Effects/*.cs" />
     <Compile Include="Enumerations/*.cs" />
+    <Compile Include="EventArgs/CanvasInvalidatedEventArgs.cs" />
     <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
     <Compile Include="Extensions/CairoExtensions.cs" />
     <Compile Include="Extensions/GdkExtensions.cs" />
+    <Compile Include="Extensions/GioExtensions.cs" />
     <Compile Include="Extensions/GtkExtensions.cs" />
     <Compile Include="Managers/ActionManager.cs" />
     <Compile Include="Managers/ChromeManager.cs" />
+    <Compile Include="Managers/LayerManager.cs" />
     <Compile Include="Managers/PaletteManager.cs" />
     <Compile Include="Managers/PaletteFormatManager.cs" />
     <Compile Include="Managers/SettingsManager.cs" />
