Enable the docking library
This is enough to get some UI showing up, but needs further testing to find any GTK4 porting issues.

--- a/Pinta/Pinta.csproj
+++ b/Pinta/Pinta.csproj
@@ -36,6 +36,8 @@
     <Compile Include="MainWindow.cs" />
     <Compile Include="MacInterop/*.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Pads/CanvasPad.cs" />
+    <Compile Include="Pads/IDockPad.cs" />
     <Compile Include="WindowShell.cs" />
   </ItemGroup>
 
