Enable building the DocumentHistory class
- Avoid using the deprecated Gtk.ListStore. For now, Gtk.StringList is used, but Gio.ListStore may be a better approach in the future when porting the history view to GTK4

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -17,6 +17,7 @@
     <Compile Remove="**/*.cs" />
     <Compile Include="PintaCore.cs" />
     <Compile Include="Actions/AppActions.cs" />
+    <Compile Include="Actions/EditActions.cs" />
     <Compile Include="Actions/FileActions.cs" />
     <Compile Include="Actions/WindowActions.cs" />
     <Compile Include="Actions/HelpActions.cs" />
