Enable building the history items.

--- a/Pinta.Core/Pinta.Core.csproj
+++ b/Pinta.Core/Pinta.Core.csproj
@@ -29,6 +29,7 @@
     <Compile Include="Classes/DocumentWorkspace.cs" />
     <Compile Include="Classes/IExtension.cs" />
     <Compile Include="Classes/Layer.cs" />
+    <Compile Include="Classes/LayerProperties.cs" />
     <Compile Include="Classes/ObservableObject.cs" />
     <Compile Include="Classes/Palette.cs" />
     <Compile Include="Classes/Point.cs" />
@@ -36,19 +37,22 @@
     <Compile Include="Classes/Re-editable/ReEditableLayer.cs" />
     <Compile Include="Classes/ScaleFactor.cs" />
     <Compile Include="Classes/SelectionModeHandler.cs" />
+    <Compile Include="Classes/SurfaceDiff.cs" />
     <Compile Include="Classes/Translations.cs" />
     <Compile Include="Classes/UserLayer.cs" />
     <Compile Include="Effects/*.cs" />
     <Compile Include="Enumerations/*.cs" />
     <Compile Include="EventArgs/CanvasInvalidatedEventArgs.cs" />
     <Compile Include="EventArgs/DocumentEventArgs.cs" />
+    <Compile Include="EventArgs/DocumentCancelEventArgs.cs" />
     <Compile Include="EventArgs/HistoryItemAddedEventArgs.cs" />
     <Compile Include="EventArgs/ModifyCompressionEventArgs.cs" />
     <Compile Include="Extensions/CairoExtensions.cs" />
     <Compile Include="Extensions/GdkExtensions.cs" />
     <Compile Include="Extensions/GioExtensions.cs" />
     <Compile Include="Extensions/GtkExtensions.cs" />
-    <Compile Include="HistoryItems/BaseHistoryItem.cs" />
+    <Compile Include="HistoryItems/*.cs" />
+    <Compile Remove="HistoryItems/TextHistoryItem.cs" />
     <Compile Include="Managers/ActionManager.cs" />
     <Compile Include="Managers/ChromeManager.cs" />
     <Compile Include="Managers/LayerManager.cs" />
