--- a/Pinta.Gui.Widgets/Pinta.Gui.Widgets.csproj
+++ b/Pinta.Gui.Widgets/Pinta.Gui.Widgets.csproj
@@ -10,5 +10,7 @@
   <ItemGroup>
     <Compile Remove="**/*.cs" />
     <Compile Include="DialogAttributes.cs" />
+    <Compile Include="Widgets/Canvas/*.cs" />
+    <Compile Include="Widgets/Ruler.cs" />
   </ItemGroup>
 </Project>
