--- a/Pinta/Pinta.csproj
+++ b/Pinta/Pinta.csproj
@@ -32,6 +32,7 @@
     <Compile Include="Actions/IActionHandler.cs" />
     <Compile Include="Actions/File/CloseDocumentAction.cs" />
     <Compile Include="Actions/File/NewDocumentAction.cs" />
+    <Compile Include="Actions/File/OpenDocumentAction.cs" />
     <Compile Include="Actions/File/ExitAction.cs" />
     <Compile Include="Actions/Help/AboutDialogAction.cs" />
     <Compile Include="DialogHandlers.cs" />
